ietf-system-plugin: refactor system state clock info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(
 
     # system-state
     src/core/system-state/platform.hpp
+    src/core/system-state/clock.hpp
 )
 
 set(
@@ -61,6 +62,7 @@ set(
 
     # system-state
     src/core/system-state/platform.cpp
+    src/core/system-state/clock.cpp
 )
 
 set(
