ietf-system-plugin: refactor auth user list API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(
     # system
     src/core/system/hostname.hpp
     src/core/system/timezone-name.hpp
+    src/core/system/auth.hpp
 )
 
 set(
@@ -71,6 +72,7 @@ set(
     # system
     src/core/system/hostname.cpp
     src/core/system/timezone-name.cpp
+    src/core/system/auth.cpp
 )
 
 set(
