feat(ietf-system): implement XPath list key extraction API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(
 set(
     CORE_SOURCES
 
+    src/core/common.cpp
     src/core/context.cpp
     src/core/sub/change.cpp
     src/core/sub/oper.cpp
