feat(CMake): add module options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,14 @@ set(PLUGIN_LIRBARY_NAME srplg-ietf-system)
 set(PLUGIN_EXECUTABLE_NAME ietf-system-plugin)
 set(PLUGIN_CORE_LIBRARY_NAME ietf-system-plugin-core)
 
+# module select options
+option(SYSTEM_MODULE "Registers the System module" ON)
+option(HOSTNAME_MODULE "Registers the Hostname module" ON)
+option(TIMEZONE_MODULE "Registers the Timezone module" ON)
+option(DNS_MODULE "Registers the DNS module" ON)
+option(NTP_MODULE "Registers the NTP module" ON)
+option(AUTH_MODULE "Registers the Authentication module" ON)
+
 find_package(PkgConfig REQUIRED)
 find_package(SYSREPOCPP REQUIRED)
 find_package(LIBYANGCPP REQUIRED)
@@ -71,6 +79,38 @@ set(
     src/main.c
     src/plugin.cpp
 )
+
+# add compile definitions for the enabled modules
+
+# System module
+if(SYSTEM_MODULE)
+    add_compile_definitions(SYSTEM_MODULE)
+endif(SYSTEM_MODULE)
+
+# Hostname module
+if(HOSTNAME_MODULE)
+    add_compile_definitions(HOSTNAME_MODULE)
+endif(HOSTNAME_MODULE)
+
+# Timezone module
+if(TIMEZONE_MODULE)
+    add_compile_definitions(TIMEZONE_MODULE)
+endif(TIMEZONE_MODULE)
+
+# DNS module
+if(DNS_MODULE)
+    add_compile_definitions(DNS_MODULE)
+endif(DNS_MODULE)
+
+# NTP module
+if(NTP_MODULE)
+    add_compile_definitions(NTP_MODULE)
+endif(NTP_MODULE)
+
+# Authentication module
+if(AUTH_MODULE)
+    add_compile_definitions(AUTH_MODULE)
+endif(AUTH_MODULE)
 
 # check for systemd flag
 if(DEFINED SYSTEMD_IFINDEX)
